mookmyshow enrichment script

--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,27 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "ename": "OverflowError",
-     "evalue": "string longer than INT_MAX bytes",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mOverflowError\u001B[0m                             Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-6-e7c5debe95ec>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     62\u001B[0m             \u001B[0mlogging\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdebug\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Error at \"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mreview_link\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     63\u001B[0m             \u001B[0mlogging\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdebug\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m\"Länge des Strings \"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mreviewBody\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 64\u001B[1;33m             \u001B[1;32mraise\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0me\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     65\u001B[0m     \u001B[0mreview_count\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     66\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-6-e7c5debe95ec>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     57\u001B[0m         \u001B[0mnode\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mgenerateNode\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m31\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     58\u001B[0m         \u001B[1;32mtry\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 59\u001B[1;33m             \u001B[0mc\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mexecute\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34mf\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\"\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnode\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mreview_link\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mreviewBody\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mreviewRating\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mratingValue\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mbestRating\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mworstRating\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     60\u001B[0m             \u001B[0mconn\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mcommit\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     61\u001B[0m         \u001B[1;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mOverflowError\u001B[0m: string longer than INT_MAX bytes"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "from requests import get\n",
@@ -74,20 +61,25 @@
     "        review = has_annotation.find('article', itemprop='reviewBody')\n",
     "        body = review.find_all('p')\n",
     "        reviewBody = \"\"\n",
+    "        other_reviewBody = \"\"\n",
     "        for item in body:\n",
-    "            reviewBody += reviewBody + item.text\n",
+    "            # if len(reviewBody) < 2000000000:\n",
+    "            reviewBody = reviewBody + item.text\n",
+    "            # else:\n",
+    "            #     other_reviewBody =\n",
     "        reviewRating = \"already included\"\n",
     "        ratingValue = has_annotation.find('span', itemprop='reviewRating').find('span', class_='entity-property-numeric-score').text\n",
     "        worstRating = \"1\"\n",
     "        bestRating = \"5\"\n",
     "        node = generateNode(31)\n",
-    "        try:\n",
-    "            c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
-    "            conn.commit()\n",
-    "        except Exception as e:\n",
-    "            logging.debug(\"Error at \" + str(review_link))\n",
-    "            logging.debug(\"Länge des Strings \" + str(len(reviewBody)))\n",
-    "            raise(e)\n",
+    "        # try:\n",
+    "        #     c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
+    "        #     conn.commit()\n",
+    "        # except Exception as e:\n",
+    "        #     logging.debug(\"Error at \" + str(review_link))\n",
+    "        #     logging.debug(\"Length des Strings \" + str(len(reviewBody)))\n",
+    "        #     raise(e)\n",
+    "        print(reviewBody)\n",
     "    review_count += 1\n",
     "\n",
     "logging.debug(\"Reviews extracted: \" + str(review_count))\n",
@@ -97,7 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "print(reviewBody)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "fail_set = set()\n",
