--- a/Scraping/movieTV_xtemplates.ipynb
+++ b/Scraping/movieTV_xtemplates.ipynb
@@ -84,19 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 108,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done https://thereviewmonk.com/ - Reviews extracted: 12 , problems: 0\n"
+      "Done https://thereviewmonk.com/ - Reviews extracted: 33, without Rating: 4, problems: 0\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "review_link='https://thereviewmonk.com/movie/chittagong/'\n",
+    "review_link='https://thereviewmonk.com/movie/dumbo/'\n",
     "response = get(review_link, headers={'User-Agent': 'Custom'})\n",
     "if response.status_code != 200:\n",
     "    problem_count += 1\n",
@@ -112,15 +112,20 @@
     "    node = generateNode(31)\n",
     "    url = review_link\n",
     "    reviewBody = a.find_all('p', itemprop='reviewBody')[0].text\n",
-    "    ratingValue = str(a.find_all('meta', itemprop='ratingValue')[0]['content'])\n",
-    "    bestRating = str(10)\n",
-    "    worstRating = str(0)\n",
-    "    reviewRating = \"already included\"\n",
-    "    c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
-    "    conn.commit()\n",
-    "    review_count += 1\n",
+    "    rating = a.find_all('meta', itemprop='ratingValue')\n",
+    "    if (len(rating)) == 0:\n",
+    "        no_rating += 1\n",
+    "        continue\n",
+    "    else:\n",
+    "        ratingValue = str(rating[0]['content'])\n",
+    "        bestRating = str(10)\n",
+    "        worstRating = str(0)\n",
+    "        reviewRating = \"already included\"\n",
+    "        c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
+    "        conn.commit()\n",
+    "        review_count += 1\n",
     "\n",
-    "print(f\"Done {host} - Reviews extracted: \" + str(review_count) + \" , problems: \" + str(problem_count))"
+    "print(f\"Done {host} - Reviews extracted: \" + str(review_count) + \", without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))"
    ],
    "metadata": {
     "collapsed": false,
