--- a/Profiling/Amazon_statistics_Movies_TV_Cellphones_Accessories.ipynb
+++ b/Profiling/Amazon_statistics_Movies_TV_Cellphones_Accessories.ipynb
@@ -25,21 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1128437\n",
-      "{'overall': 5.0, 'verified': True, 'reviewTime': '08 4, 2014', 'reviewerID': 'A24E3SXTC62LJI', 'asin': '7508492919', 'style': {'Color:': ' Bling'}, 'reviewerName': 'Claudia Valdivia', 'reviewText': 'Looks even better in person. Be careful to not drop your phone so often because the rhinestones will fall off (duh). More of a decorative case than it is protective, but I will say that it fits perfectly and securely on my phone. Overall, very pleased with this purchase.', 'summary': \"Can't stop won't stop looking at it\", 'unixReviewTime': 1407110400}\n"
+      "194439\n",
+      "{'reviewerID': 'A30TL5EWN6DFXT', 'asin': '120401325X', 'reviewerName': 'christina', 'helpful': [0, 0], 'reviewText': \"They look good and stick good! I just don't like the rounded shape because I was always bumping it and Siri kept popping up and it was irritating. I just won't buy a product like this again\", 'overall': 4.0, 'summary': 'Looks Good', 'unixReviewTime': 1400630400, 'reviewTime': '05 21, 2014'}\n"
      ]
     }
    ],
    "source": [
+    "input = '../Data/reviews_Cell_Phones_and_Accessories_5.json.gz'\n",
     "data = []\n",
-    "with gzip.open('Cell_Phones_and_Accessories_5.json.gz') as f:\n",
+    "with gzip.open(input) as f:\n",
     "    for l in f:\n",
     "        data.append(json.loads(l.strip()))\n",
     "    \n",
