--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -18,6 +18,7 @@
     "import sqlite3\n",
     "import json\n",
     "import logging\n",
+    "import pandas as pd\n",
     "\n",
     "# Input\n",
     "already_file = 'already_links_in/telegraph.txt'\n",
@@ -25,8 +26,8 @@
     "\n",
     "# Output\n",
     "log_path = '../Logs/test.log'\n",
-    "db_path = '../Data/test.db'\n",
-    "db_name = 'test'\n",
+    "db_path = '../Data/moviewreviews.db'\n",
+    "db_name = 'moviereviews'\n",
     "conn = sqlite3.connect(db_path)\n",
     "c = conn.cursor()\n",
     "#\n",
@@ -37,6 +38,41 @@
     "logger.addHandler(fhandler)\n",
     "logger.setLevel(logging.DEBUG)\n",
     "\n",
+    "# Input\n",
+    "df = pd.read_sql_query(\"SELECT * from \" + str(db_name), conn)\n",
+    "df.dropna()\n",
+    "df_new = df[df.REVIEWBODY.notnull() & df.URL.str.contains('in.bookmyshow')]\n",
+    "df_new.describe()\n",
+    "df_new.drop(['RATING', 'REVIEWRATING', 'BESTRATING', 'WORSTRATING'], axis = 1)\n",
+    "\n",
+    "\n",
+    "for index, row in df_new.iterrows():\n",
+    "    node = row['NODE']\n",
+    "    url = row['URL']\n",
+    "    if row['REVIEWBODY'] == '<null>':\n",
+    "        print(\"HEY!\")\n",
+    "    # body = row['REVIEWBODY'].split(\"\\\"\")[1]\n",
+    "\n",
+    "    # response = get(url)\n",
+    "    # soup = BeautifulSoup(response.text, 'lxml')\n",
+    "    # for a in soup.find_all('div', itemprop='review'):\n",
+    "    #     review = a.find_all('meta', itemprop='description')\n",
+    "    #     if len(review) == 0:\n",
+    "    #         pass\n",
+    "    #     else:\n",
+    "    #         content = review[0]['content']\n",
+    "    #         if content == body:\n",
+    "    #             ratingValue = a.find('span', itemprop='ratingValue')['content']\n",
+    "    #             update_qry = f'UPDATE {db_name} SET REVIEWRATING = {ratingValue} WHERE NODE = ? AND URL = ? ;'\n",
+    "    #             c.execute(update_qry, [node,url])\n",
+    "    #             conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "def generateNode(length):\n",
     "    letters_and_digits = string.ascii_letters + string.digits\n",
     "    result_str = ''.join((random.choice(letters_and_digits) for i in range(length)))\n",
@@ -85,7 +121,13 @@
     "logging.debug(\"Reviews extracted: \" + str(review_count))\n",
     "logging.debug(\"Reviews without Review Annotation: \" + str(no_annotation))\n",
     "logging.debug(\"Already included: \" + str(already_count))"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
