--- a/Scraping/movieTV_xtemplates.ipynb
+++ b/Scraping/movieTV_xtemplates.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -33,12 +33,24 @@
     "# Input/ Output\n",
     "db_path = '../Data/test.db'\n",
     "db_name = 'test'\n",
-    "log_path = '../Logs/test1.log'\n",
+    "log_path = '../Logs/test.log'\n",
     "conn = sqlite3.connect(db_path)\n",
     "c = conn.cursor()\n",
+    "c.execute((\"\"\"\n",
+    "       CREATE TABLE IF NOT EXISTS\n",
+    "           test(\n",
+    "               NODE TEXT,\n",
+    "               URL TEXT,\n",
+    "               REVIEWBODY TEXT,\n",
+    "               RATING TEXT,\n",
+    "               REVIEWRATING TEXT,\n",
+    "               BESTRATING TEXT,\n",
+    "               WORSTRATING TEXT,\n",
+    "               PRIMARY KEY (NODE, URL))\n",
+    "   \"\"\"))\n",
     "\n",
     "# Input\n",
-    "current_file = 'already_links_in/thereviewmonk.txt'\n",
+    "current_file = 'already_links_in/deepfocusreview.txt'\n",
     "current_reviews = set(line.strip() for line in open(current_file))\n",
     "\n",
     "logger = logging.getLogger()\n",
@@ -51,8 +63,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "outputs": [],
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1129\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(current_reviews))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1870\n"
+     ]
+    }
+   ],
    "source": [
     "host = \"https://thereviewmonk.com/\"\n",
     "review_count = 0\n",
@@ -69,11 +111,16 @@
     "\n",
     "# for i in current_reviews:\n",
     "#     print(i)\n",
+    "for character in string.ascii_lowercase + '0':\n",
+    "    url = f'https://deepfocusreview.com/reviews/?id={character}'\n",
+    "    response = get(url)\n",
+    "    soup = BeautifulSoup(response.text, 'lxml')\n",
+    "    for entry in soup.find_all('ol', id='reviewalpha-list'):\n",
+    "        for link in entry.find_all('li'):\n",
+    "            # print(link.a['href'])\n",
+    "            review_count += 1\n",
     "\n",
-    "# for page in range (1,34):\n",
-    "#     url = f'https://www.telegraph.co.uk/films/reviews/page-{page}/'\n",
-    "#     soup = BeautifulSoup(get(url).text, 'lxml')\n",
-    "\n"
+    "print(review_count)"
    ],
    "metadata": {
     "collapsed": false,
@@ -84,48 +131,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done https://thereviewmonk.com/ - Reviews extracted: 33, without Rating: 4, problems: 0\n"
+      "already in\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "review_link='https://thereviewmonk.com/movie/dumbo/'\n",
-    "response = get(review_link, headers={'User-Agent': 'Custom'})\n",
-    "if response.status_code != 200:\n",
-    "    problem_count += 1\n",
-    "    print(review_link)\n",
+    "review_link='https://deepfocusreview.com/reviews/shutter-island/'\n",
+    "if review_link in current_reviews:\n",
+    "    print('already in')\n",
+    "    pass\n",
     "else:\n",
-    "    review_soup = BeautifulSoup(response.text, 'lxml')\n",
-    "    # print(review_soup)\n",
-    "\n",
-    "# b = review_soup.find_all('div', itemtype='http://schema.org/Review')\n",
-    "# print(len(b))\n",
-    "\n",
-    "for a in review_soup.find_all('div', itemtype='http://schema.org/Review'):\n",
-    "    node = generateNode(31)\n",
-    "    url = review_link\n",
-    "    reviewBody = a.find_all('p', itemprop='reviewBody')[0].text\n",
-    "    rating = a.find_all('meta', itemprop='ratingValue')\n",
-    "    if (len(rating)) == 0:\n",
-    "        no_rating += 1\n",
-    "        continue\n",
+    "    response = get(review_link)\n",
+    "    if response.status_code != 200:\n",
+    "        problem_count += 1\n",
+    "        # print(review_link)\n",
     "    else:\n",
-    "        ratingValue = str(rating[0]['content'])\n",
-    "        bestRating = str(10)\n",
-    "        worstRating = str(0)\n",
+    "        review_soup = BeautifulSoup(response.text, 'lxml')\n",
+    "        # print(review_soup)\n",
+    "        node = generateNode(31)\n",
+    "        url = review_link\n",
+    "        reviewBody = \"\"\n",
+    "        for i in review_soup.find_all('div', itemprop='reviewBody'):\n",
+    "            for j in i.find_all('p'):\n",
+    "                reviewBody = reviewBody + j.getText()\n",
+    "\n",
+    "        ratingValue = review_soup.find('meta', itemprop='ratingValue')['content']\n",
+    "        worstRating = review_soup.find('meta', itemprop='worstRating')['content']\n",
+    "        bestRating = review_soup.find('meta', itemprop='bestRating')['content']\n",
     "        reviewRating = \"already included\"\n",
+    "\n",
+    "        print('node:' + node)\n",
+    "        print('url: '+ review_link)\n",
+    "        print('reviewBody: ' + reviewBody)\n",
+    "        print('worstRating: ' + worstRating)\n",
+    "        print('bestRating: ' + bestRating)\n",
+    "        print('ratingValue: ' + ratingValue)\n",
+    "\n",
     "        c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
     "        conn.commit()\n",
-    "        review_count += 1\n",
     "\n",
-    "print(f\"Done {host} - Reviews extracted: \" + str(review_count) + \", without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))"
+    "# print(f\"Done {host} - Reviews extracted: \" + str(review_count) + \", without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))"
    ],
    "metadata": {
     "collapsed": false,
