check phone, tut selenium

--- a/Intermediary/getCurrentReviewAdresses.ipynb
+++ b/Intermediary/getCurrentReviewAdresses.ipynb
@@ -28,6 +28,7 @@
     "bookmyshow_file = '../Scraping/already_links_in/bookmyshow.txt'\n",
     "thereviewmonk_file = '../Scraping/already_links_in/thereviewmonk.txt'\n",
     "deepfocusreview_file = '../Scraping/already_links_in/deepfocusreview.txt'\n",
+    "nationalpost_file = '../Scraping/already_links_in/nationalpost.txt'\n",
     "\n",
     "df = pd.read_sql_query(\"SELECT * from \" + str(db_name), conn)\n",
     "df.dropna()\n",
@@ -119,6 +120,23 @@
     "with open(deepfocusreview_file, 'w') as f:\n",
     "    for item in deepfocusreview_lst:\n",
     "        f.write(\"%s\\n\" % item)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "nationalpost_lst = df[df.URL.str.contains('nationalpost')]['URL'].value_counts().index.tolist()\n",
+    "with open(nationalpost_file, 'w') as f:\n",
+    "    for item in nationalpost_lst:\n",
+    "        f.write(\"%s\\n\" % item)\n"
    ],
    "metadata": {
     "collapsed": false,
