phone cnet coolsmartphone

--- a/Scraping/selenium_test.ipynb
+++ b/Scraping/selenium_test.ipynb
@@ -19,13 +19,7 @@
     "import string\n",
     "import sqlite3\n",
     "import logging\n",
-    "import re\n",
-    "#\n",
-    "browser = webdriver.Chrome()\n",
-    "browser.get(\"https://www.cinemablend.com/reviews/\")\n",
-    "time.sleep(1)\n",
-    "# browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "# time.sleep(5)"
+    "import re"
    ]
   },
   {
@@ -33,6 +27,12 @@
    "execution_count": 13,
    "outputs": [],
    "source": [
+    "#\n",
+    "browser = webdriver.Chrome()\n",
+    "browser.get(\"https://www.cinemablend.com/reviews/\")\n",
+    "time.sleep(1)\n",
+    "# browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")\n",
+    "# time.sleep(5)\n",
     "# elem = browser.find_element('story-related')\n",
     "button = browser.find_element_by_id('onetrust-accept-btn-handler')\n",
     "button.click()\n",
@@ -47,14 +47,7 @@
     "#\n",
     "# post_elems= browser.find_elements_by_class_name(\"post-item-title\")\n",
     "\n",
-    "# in einer data structure tun und sicherstellen, dass ich sie nicht noch einmal scrape\n",
-    "\n",
-    "# response = get(\"https://www.cinemablend.com/reviews/\")\n",
-    "# soup = BeautifulSoup(response.text, 'lxml')\n",
-    "# movie_container = soup.find_all(\"div\", class_=\"story-related\")\n",
-    "# # # print(type(movie_container))\n",
-    "# # for movie in movie_container:\n",
-    "# #     print(movie.find_all(a))"
+    "# in einer data structure tun und sicherstellen, dass ich sie nicht noch einmal scrape"
    ],
    "metadata": {
     "collapsed": false,
@@ -115,26 +108,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "\n",
-    "db_path = '../Data/test.db'\n",
-    "db_name = 'test'\n",
-    "log_path = '../Logs/test.log'\n",
-    "conn = sqlite3.connect(db_path)\n",
-    "c = conn.cursor()\n",
-    "c.execute((\"\"\"\n",
-    "       CREATE TABLE IF NOT EXISTS\n",
-    "           test1(\n",
-    "               NODE TEXT,\n",
-    "               URL TEXT,\n",
-    "               REVIEWBODY TEXT,\n",
-    "               RATING TEXT,\n",
-    "               REVIEWRATING TEXT,\n",
-    "               BESTRATING TEXT,\n",
-    "               WORSTRATING TEXT,\n",
-    "               PRIMARY KEY (NODE, URL))\n",
-    "   \"\"\"))"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
