--- a/Scraping/movieTV_xtemplates.ipynb
+++ b/Scraping/movieTV_xtemplates.ipynb
@@ -86,18 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "414\n"
+      "301\n"
      ]
     }
    ],
    "source": [
-    "host = \"https://www.cnet.com\"\n",
+    "host = \"https://www.proporta.com\"\n",
     "review_count = 0\n",
     "no_annotation = 0\n",
     "no_rating = 0\n",
@@ -121,8 +121,8 @@
     "    rights = soup.find_all('li', class_='item last')\n",
     "    for right in rights:\n",
     "        links.append(right.a['href'] + '#allReviews')\n",
-    "for page in range(1, 23):\n",
-    "    url = f'https://www.proporta.com/devices?p={page}/'\n",
+    "for page in range(1, 5):\n",
+    "    url = f'https://www.proporta.com/accessories?p={page}/'\n",
     "    response = get(url)\n",
     "    soup = BeautifulSoup(response.text, 'lxml')\n",
     "    lefts = soup.find_all('li', class_='item first')\n",
@@ -164,73 +164,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 93,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-10-09\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-09-27\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-29\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-28\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-28\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-28\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-28\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-28\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-25\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-25\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-25\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-25\" itemprop=\"datePublished\"/>\n",
-      "<meta content=\"2019-08-25\" itemprop=\"datePublished\"/>\n"
+      "Done https://www.cnet.com - Reviews extracted: 1, without Rating: 0\n"
      ]
     }
    ],
    "source": [
-    "# review_link='https://www.proporta.com/ted-baker-mirror-case-for-iphone-xr-leyyaa#allReviews'\n",
-    "review_link='https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews'\n",
+    "review_link='https://www.proporta.com/ted-baker-mirror-case-for-iphone-xr-leyyaa#allReviews'\n",
+    "# review_link='https://www.proporta.com/ted-baker-cheryia-mirror-folio-case-with-outer-card-slot-for-iphone-8-7-6-hedgerow#allReviews'\n",
     "response = get(review_link)\n",
     "soup = BeautifulSoup(response.text, 'lxml')\n",
-    "reviews = soup.find_all('li', itemtype='http://schema.org/Review')\n",
-    "if len(reviews) == 0:\n",
+    "reviews = soup.find('ol', id='reviewContainer')\n",
+    "if reviews is None:\n",
     "    no_annotation += 1\n",
     "    pass\n",
     "else:\n",
+    "    # for review in reviews.find_all('li', itemtype='http://schema.org/Review'):\n",
     "    for review in reviews:\n",
-    "        reviewBody = review.find('p', itemprop='reviewBody')\n",
-    "        for word in reviewBody:\n",
-    "            neu = review.find('meta', itemprop='datePublished')\n",
-    "            print(neu)\n",
-    "        posted = review.find('meta', itemprop='datePublished').text\n",
-    "        substring = f\"\\n {posted}$\"\n",
-    "        # print(reviewBody)\n",
+    "        try:\n",
+    "            node = generateNode(31)\n",
+    "            url = review_link\n",
+    "            reviewBody = review.find('p', itemprop='reviewBody').text.split('\\n')[0]\n",
+    "            ratingValue = review.find('span', itemprop='ratingValue').text\n",
+    "            bestRating = review.find('span', itemprop='bestRating').text\n",
+    "            worstRating = review.find('meta', itemprop='worstRating').text\n",
+    "            reviewRating = review.find('div', itemprop='reviewRating').text\n",
+    "\n",
+    "            c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,reviewRating,ratingValue,bestRating,worstRating))\n",
+    "            conn.commit()\n",
+    "\n",
+    "            # print('node:' + node)\n",
+    "            # print('url: '+ review_link)\n",
+    "            # print('reviewBody: ' + reviewBody)\n",
+    "            # print('worstRating: ' + worstRating)\n",
+    "            # print('bestRating: ' + bestRating)\n",
+    "            # print('ratingValue: ' + ratingValue)\n",
+    "            review_count =+ 1\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "print(f\"Done {host} - Reviews extracted: \" + str(review_count) + \", without Rating: \" + str(no_rating))\n",
+    "# for review in review_container:\n",
+    "# reviews = soup.find_all('li', itemtype='http://schema.org/Review')\n",
+    "# if len(reviews) == 0:\n",
+    "#\n",
+    "#     pass\n",
+    "# else:\n",
+    "#     for review in reviews:\n",
+    "#         reviewBody = review.find('p', itemprop='reviewBody').text.split('\\n')[0]\n",
+    "#         print(reviewBody)\n",
+    "#         print('Next')\n",
     "        # ratingValue = data['review']['reviewRating']['ratingValue']\n",
     "        # bestRating = data['review']['reviewRating']['bestRating']\n",
     "        # worstRating = data['review']['reviewRating']['worstRating']\n",
