--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'decompose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-10-5ebd88203db0>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     48\u001B[0m     \u001B[0murl\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mreview_link\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     49\u001B[0m     \u001B[0mreviewText\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mreview\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfind\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'div'\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mitemprop\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m'reviewBody'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 50\u001B[1;33m     \u001B[0mreviewText\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfind\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'section'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdecompose\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     51\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     52\u001B[0m     \u001B[0mreviewBody\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mreviewText\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mtext\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mstrip\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'decompose'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done https://www.techadvisor.co.uk/ - Reviews extracted: 1 out of 0\n",
+      "without Rating: 0, problems: 0\n"
      ]
     }
    ],
@@ -66,11 +63,10 @@
     "    node = generateNode(31)\n",
     "    url = review_link\n",
     "    reviewText = review.find('div', itemprop='reviewBody')\n",
-    "    if reviewText is None:\n",
-    "        no_annotation += 1\n",
-    "        continue\n",
-    "    else\n",
+    "    try:\n",
     "        reviewText.find('section').decompose()\n",
+    "    except:\n",
+    "        pass\n",
     "        reviewBody = reviewText.text.strip()\n",
     "        try:\n",
     "            ratingValue = review.find('meta', itemprop='ratingValue')['content']\n",
