--- a/Scraping/Test.ipynb
+++ b/Scraping/Test.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done https://www.techadvisor.co.uk/ - Reviews extracted: 1 out of 0\n",
+      "Done https://www.techadvisor.co.uk/ - Reviews extracted: 1 out of 1\n",
       "without Rating: 0, problems: 0\n"
      ]
     }
@@ -53,8 +53,10 @@
     "    node = \"_:znode\" + result_str\n",
     "    return node\n",
     "review_link = 'https://www.techadvisor.co.uk/review/honor-magic-watch-2-3781755/'\n",
+    "review_count += 1\n",
     "if review_link in current_reviews:\n",
     "    already_count = 0\n",
+    "    # continue\n",
     "    pass\n",
     "else:\n",
     "    response = get(review_link)\n",
@@ -63,21 +65,21 @@
     "    node = generateNode(31)\n",
     "    url = review_link\n",
     "    reviewText = review.find('div', itemprop='reviewBody')\n",
-    "    try:\n",
-    "        reviewText.find('section').decompose()\n",
-    "    except:\n",
+    "    if reviewText.find('section') is None:\n",
     "        pass\n",
-    "        reviewBody = reviewText.text.strip()\n",
-    "        try:\n",
-    "            ratingValue = review.find('meta', itemprop='ratingValue')['content']\n",
-    "            bestRating = review.find('meta', itemprop='bestRating')['content']\n",
-    "            worstRating = review.find('meta', itemprop='worstRating')['content']\n",
-    "            reviewRating = ''\n",
-    "            c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
-    "            conn.commit()\n",
-    "            extract_count += 1\n",
-    "        except:\n",
-    "            no_rating += 1\n",
+    "    else:\n",
+    "        reviewText.find('section').decompose()\n",
+    "    reviewBody = reviewText.text.strip()\n",
+    "    try:\n",
+    "        ratingValue = review.find('meta', itemprop='ratingValue')['content']\n",
+    "        bestRating = review.find('meta', itemprop='bestRating')['content']\n",
+    "        worstRating = review.find('meta', itemprop='worstRating')['content']\n",
+    "        reviewRating = ''\n",
+    "        c.execute(f\"INSERT OR IGNORE INTO {db_name} (NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING) VALUES (?,?,?,?,?,?,?);\",(node,review_link,reviewBody,str(reviewRating),ratingValue,bestRating,worstRating))\n",
+    "        conn.commit()\n",
+    "        extract_count += 1\n",
+    "    except:\n",
+    "        no_rating += 1\n",
     "print(f\"Done {host} - Reviews extracted: \" + str(extract_count) + \" out of \" + str(review_count))\n",
     "print(\"without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))"
    ],
