--- a/Scraping/movieTV_xtemplates.ipynb
+++ b/Scraping/movieTV_xtemplates.ipynb
@@ -176,8 +176,7 @@
     "        no_rating += 1\n",
     "\n",
     "print(f\"Done {host} - Reviews extracted: \" + str(extract_count) + \" out of \" + str(review_count))\n",
-    "print(\"without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))\n",
-    "\n"
+    "print(\"without Rating: \" + str(no_rating) + \", problems: \" + str(problem_count))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -188,10 +187,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "outputs": [],
    "source": [
-    "\n"
+    "review_link='https://www.bestbuy.com/site/mobile-cell-phones/mobile-phones-with-plans/pcmcat209400050001.c?cp=6&id=pcmcat209400050001&sp=%2Bbrand%20skuidsaas'\n",
+    "response = get(review_link)\n",
+    "soup = BeautifulSoup(response.text, 'lxml')"
    ],
    "metadata": {
     "collapsed": false,
